10 trail serra daire

--- a/index.html
+++ b/index.html
@@ -356,6 +356,19 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/10-trail-serra-daire/image-696c040575479c57dddc84a1_e.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/10-trail-serra-daire/image-696c040575479c57dddc84a1_e.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="10º Trail Serra D'Aire - Jan 17, 2026"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/10-trail-serra-daire.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/xmas-night-trail/xmas-trail.4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/xmas-night-trail/xmas-trail.4.jpg" data-gallery="portfolioGallery"
