--- a/events/10-trail-serra-daire.html
+++ b/events/10-trail-serra-daire.html
@@ -343,6 +343,31 @@
                     </div>
                 </div>
 
+                <div class="container portfolio-details">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="portfolio-details-slider swiper border border-info">
+                                <div class="swiper-wrapper align-items-center text-center">
+
+                                    <div class="swiper-slide">
+                                        <div class="portfolio">
+                                            <div class="portfolio-wrap">
+                                                <img src="../assets/img/portfolio/10-trail-serra-daire/image-696d1ea883e968bc62790d8a.jpg" class="img-fluid"
+                                                    alt="">
+                                                <div class="portfolio-links">
+                                                    <a href="../assets/img/portfolio/10-trail-serra-daire/image-696d1ea883e968bc62790d8a.jpg"
+                                                        data-gallery="portfolioGallery-4" class="portfolio-lightbox"
+                                                        title="6"><i class="bx bx-window-open"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="container portfolio-details mb-5">
                     <div class="row">
                         <div class="col-lg-12">
