fixed img extension

--- a/events/10-trail-serra-daire.html
+++ b/events/10-trail-serra-daire.html
@@ -352,10 +352,10 @@
                                     <div class="swiper-slide">
                                         <div class="portfolio">
                                             <div class="portfolio-wrap">
-                                                <img src="../assets/img/portfolio/10-trail-serra-daire/image-696d1ea883e968bc62790d8a.jpg" class="img-fluid"
+                                                <img src="../assets/img/portfolio/10-trail-serra-daire/image-696d1ea883e968bc62790d8a.jpeg" class="img-fluid"
                                                     alt="">
                                                 <div class="portfolio-links">
-                                                    <a href="../assets/img/portfolio/10-trail-serra-daire/image-696d1ea883e968bc62790d8a.jpg"
+                                                    <a href="../assets/img/portfolio/10-trail-serra-daire/image-696d1ea883e968bc62790d8a.jpeg"
                                                         data-gallery="portfolioGallery-4" class="portfolio-lightbox"
                                                         title="6"><i class="bx bx-window-open"></i></a>
                                                 </div>
